src/server/microk8s/bongofn/templates/bongofn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: bongofn
  name: bongofn
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bongofn
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/esnet: "true"
        io.kompose.service: bongofn
    spec:
      containers:
        - image: gluteusmaximus/bongofunctions:latest
          name: functions
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /home/site/wwwroot/store
              name: bongofn
      restartPolicy: Always
      volumes:
        - name: bongofn
          persistentVolumeClaim:
            claimName: bongofn
status: {}
