src/server/microk8s/bongofn/templates/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/esnet: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: bootstrap.memory_lock
              value: "true"
            - name: discovery.type
              value: single-node
            - name: http.cors.allow-credentials
              value: "true"
            - name: http.cors.allow-headers
              value: X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
            - name: http.cors.allow-origin
              value: http://localhost:1358,http://127.0.0.1:1358
            - name: http.cors.enabled
              value: "true"
            - name: http.port
              value: "9200"
          image: elasticsearch:7.17.16
          name: elasticsearch
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: esdata01
      restartPolicy: Always
      volumes:
        - name: esdata01
          persistentVolumeClaim:
            claimName: esdata01
status: {}
