src/server/microk8s/bongofn/templates/bongofn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bongofn-ingress
    annotations:
    #    nginx.ingress.kubernetes.io/use-regex: "true"
    #    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    ingressClassName: public

    tls:
    - hosts:
        - bongofn.vestrong.eu
      secretName: bongosecret-tls
    privateCA: true
    
    rules:
        - host: bongofn.vestrong.eu
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: bongofn
                            port:
                                number: 8080
