src/server/microk8s/bongofn/templates/sensor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sensor-ingress
    annotations:
    #    nginx.ingress.kubernetes.io/use-regex: "true"
    #    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    ingressClassName: public
    rules:
        - host: iot.vestrong.eu
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: mosquitto
                            port:
                                number: 1883
        - host: grafana.vestrong.eu
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: grafana
                            port:
                                number: 3000
